# service_usr_auth

./: Cargo.toml  README.md  config.toml
src/: jwt_verification.rs  mailer.rs  main.rs  mongo.rs  password_manager.rs  routes.rs  structs.rs
src/routes/: login.rs  mod.rs  registration.rs
