[package]
name = "service_usr_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = { version = "0.6.20", features = ["headers"] }
base64 = "0.21.4"
common_regex_rs = "0.1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
jsonwebtoken = "8.3.0"
mongodb = "2.7.0"
serde = "1.0.188"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1"
tracing-subscriber = "0.2.0"
uuid = "1.4.1"
